add styles and layouts for #71

--- a/src/templates/joomladach2023/language/de-DE/de-DE.tpl_joomladach2023.sys.ini
+++ b/src/templates/joomladach2023/language/de-DE/de-DE.tpl_joomladach2023.sys.ini
@@ -1,2 +1,4 @@
 COM_CONTENT_CATEGORY_VIEW_SERVICEPROVIDERDIRECTORY_TITLE = 'Dienstleisterverzeichnis'
 COM_CONTENT_CATEGORY_VIEW_SERVICEPROVIDERDIRECTORY_DESC = 'Ansicht zur Listung der Dienstleister im Dienstleisterverzeichnis'
+COM_CONTENT_CATEGORY_VIEW_VIDEOBLOG_TITLE = 'Videoblog'
+COM_CONTENT_CATEGORY_VIEW_VIDEOBLOG_DESC = 'Ansicht zur Listung der Einträge im Videoblog'
